--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "babenkoivan/elastic-scout-driver": "*",
+        "babenkoivan/elastic-scout-driver-plus": "*",
         "darkaonline/l5-swagger": "^8.5",
         "enqueue/amqp-bunny": "^0.10.19",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3"
     },
